--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,6 +1,6 @@
 .dialogs {
     display: grid;
-    grid-template-columns: 2fr 10fr;
+    grid-template-columns: 3fr 10fr;
     grid-gap: 20px;
 }
 
@@ -8,14 +8,71 @@
     padding: 10px;
 }
 
-.dialogsItems{
+.dialog {
+    padding: 5px;
+    border-radius: 4px;
+}
+
+.dialog:hover {
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .dialog.active {
     color: gold;
 }
+
 .dialog .messages {
     padding: 10px;
 }
 
-.message {}
+.dialogItem {
+    display: flex;
+    align-items: center;
+    grid-gap: 10px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.dialog:not(:last-child) {
+    margin-bottom: 16px;
+}
+
+.dialogImg {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.dialogName {
+    margin-bottom: 5px;
+}
+
+.message {
+    padding: 5px 15px;
+    border-radius: 10px;
+    background-color: #fff;
+    color: #000;
+    width: max-content;
+}
+
+/* .message:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: -20px;
+    display: block;
+    height: 20px;
+    width: 20px;
+    z-index: -1;
+    background: inherit;
+    clip-path: url(#svgPath);
+} */
+
+.message:nth-child(odd) {
+    margin-left: auto;
+}
+
+.message:not(:last-child) {
+    margin-bottom: 16px;
+}
