--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -8,3 +8,9 @@
     overflow: hidden;
     object-fit: cover;
 }
+.item__head{
+    display: flex;
+    align-items: center;
+    grid-gap: 20px;
+    margin-bottom: 10px;
+}
