added preloader and end 57 lesson

--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -19,3 +19,15 @@
     justify-content: space-between;
     width: 100%;
 }
+.pagination span{
+    margin-right: 5px;
+    cursor: pointer;
+}
+.selectedPage{
+    font-weight: 600;
+}
+
+.preloader{
+    display: block;
+    width: 60px;
+}
