--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.scss
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.scss
@@ -30,3 +30,11 @@
         object-fit: cover;
     }
 }
+
+.statusInput input, 
+.statusInput label {
+    color: #fff;
+}
+.statusInput input {
+    border-bottom-color: #fff
+}
