--- a/src/App.css
+++ b/src/App.css
@@ -49,16 +49,24 @@ body{
 .btn {
   display: inline-block;
   padding: 10px 20px;
-  border-radius: 4px;
+  border-radius: 20px;
   border: 2px solid #ccc;
   background-color: #ccc;
   font-weight: 700;
   cursor: pointer;
   transition: all .3s;
 }
-
+.btn-primary{
+  background-color: #61DAFB;
+  border-color: #61DAFB;
+}
 .btn:hover {
   background-color: #333;
   color: #fff;
 }
 
+button{
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+}
